--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -50,6 +50,12 @@
     <ClCompile Include="GeneratedFiles\Release\moc_Options.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_NetworkSettings.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_NetworkSettings.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="UI.qrc">
@@ -62,6 +68,9 @@
       <Filter>Form Files</Filter>
     </CustomBuild>
     <CustomBuild Include="Options.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="NetworkSettings.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
