--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -49,10 +49,10 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>E:\Programming\C++\AI\XO\Lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>E:\Programming\C++\AI\XO\NetGlobals;$(IncludePath)</IncludePath>
+    <IncludePath>E:\Programming\C++\AI\XO\Globals;E:\Programming\C++\AI\XO\NetGlobals;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>E:\Programming\C++\AI\XO\NetGlobals;$(IncludePath)</IncludePath>
+    <IncludePath>E:\Programming\C++\AI\XO\Globals;E:\Programming\C++\AI\XO\NetGlobals;$(IncludePath)</IncludePath>
     <LibraryPath>E:\Programming\C++\AI\XO\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -69,7 +69,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>Ws2_32.lib;NetGlobals.lib</AdditionalDependencies>
+      <AdditionalDependencies>Ws2_32.lib;NetGlobals.lib;Globals.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -90,7 +90,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalDependencies>Ws2_32.lib;NetGlobals.lib</AdditionalDependencies>
+      <AdditionalDependencies>Ws2_32.lib;NetGlobals.lib;Globals.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
