--- a/Globals/Globals.vcxproj.filters
+++ b/Globals/Globals.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LockableObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LockableObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
