--- a/GameLogic/GameLogic.vcxproj.filters
+++ b/GameLogic/GameLogic.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="HumanPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OnlinePlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIPlayer.h">
@@ -19,6 +22,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OnlinePlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
